fxGrid and Reactive Form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
       ],
       "@environments/*": [
         "src/environments/*"
+      ],
+      "@helpers/*": [
+        "src/helpers/*"
       ]
     }
   },
