--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@angular/router": "~8.2.3",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@sweetalert2/ngx-sweetalert2": "^8.0.0",
     "angular-web-storage": "^7.0.0-beta.1",
     "flag-icon-css": "^3.4.5",
     "hammerjs": "^2.0.8",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-order-pipe": "^2.0.4",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^9.8.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
