--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/flag-icon-css/css/flag-icon.min.css",
-              "./node_modules/sweetalert2/src/sweetalert2.scss",
+              "./node_modules/@sweetalert2/themes/dark/dark.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -98,7 +98,7 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/flag-icon-css/css/flag-icon.min.css",
-              "./node_modules/sweetalert2/src/sweetalert2.scss",
+              "./node_modules/@sweetalert2/themes/dark/dark.css",
               "src/styles.scss"
             ],
             "scripts": []
