--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@sweetalert2/ngx-sweetalert2": "^8.0.0",
+    "@sweetalert2/themes": "^3.1.1",
     "angular-web-storage": "^7.0.0-beta.1",
     "flag-icon-css": "^3.4.5",
     "hammerjs": "^2.0.8",
