Survey module routing and form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,9 @@
       "@appointment/*": [
         "src/app/appointment/*"
       ],
+      "@reports/*": [
+        "src/app/survey/*"
+      ],
       "@shared/*": [
         "src/app/shared/*"
       ],
