survey: identitication, steppers and tabs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,12 @@
       "@appointment/*": [
         "src/app/appointment/*"
       ],
+      "@survey/*": [
+        "src/app/survey/*"
+      ],
+      "@responsible/*": [
+        "src/app/responsible/*"
+      ],
       "@reports/*": [
         "src/app/survey/*"
       ],
