--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "flag-icon-css": "^3.4.5",
     "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-order-pipe": "^2.0.4",
     "path": "^0.12.7",
