navigation between tabs and steppers

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.3",
     "@angular/material": "^8.2.3",
+    "@angular/material-moment-adapter": "^9.1.2",
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
