--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
+    "prod-start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
